--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div>
-        <h1>Oops. Something went wrong</h1>
+        <h1>BinSense: Smart Waste Management System</h1>
         <p>We are experiencing some difficulties, please try again later</p>
     </div>
 {% endblock %}
