--- a/app/templates/errors/403.html
+++ b/app/templates/errors/403.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class="content-section">
+    <div>
         <h1>Forbidden. You don't have permission to do that (403)</h1>
         <p>Please check/ login to your account and try again</p>
     </div>
