--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class="content-section">
+    <div>
         <h1>Page not found (404)</h1>
         <p>That page does not exist. Please try a different location</p>
     </div>
