Code refactored and README written

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,7 +2,28 @@
 
 {% block content %}
     <div>
-        <h1>BinSense: Smart Waste Management System</h1>
-        <p>We are experiencing some difficulties, please try again later</p>
-    </div>
+        <h1>BinSense: Smart Waste Management System (SWMS)</h1>
+        <p>SWMS is a comprehensive solution designed to address the challenges and inefficiencies of traditional waste management methods.
+            By leveraging IoT sensors, real-time data monitoring, and intelligent routing algorithms, SWMS optimises waste collection processes
+            to minimise costs, reduce environmental impact, and enhance overall service quality.
+            Key Features:<br><br>
+            
+            <ul>
+                <li>
+                    Real-Time Monitoring: SWMS continuously monitors the fill levels of waste bins in real-time, ensuring timely collection
+                    and preventing overflow.<br><br>
+                </li>
+                <li>
+                    Dynamic Routing: Using data analytics and machine learning algorithms, SWMS dynamically optimises
+                    collection routes based on current fill levels, traffic conditions, and other factors.<br><br>
+                </li>
+                <li>
+                    Cost Efficiency: By avoiding unnecessary collection trips and optimising resource allocation,
+                    SWMS significantly reduces operational costs for waste management providers.<br><br>
+                <li>
+                    Environmental Sustainability: SWMS helps reduce carbon emissions and environmental impact by
+                    minimising vehicle usage and optimising collection routes.
+            </ul>
+        </p>
+</div>
 {% endblock %}
